--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-<body bgcolor=black>
+<body bgcolor=white>
 <center>
 <h2><font color=red>Hello From DevOps WebPage!</font></h2>
-<font color=blue>i reccomed courses from www.adv-it.net</font>
+<font color=blue>Deploy from github --> Jenkins --> WebServer</font>
 </center>
 </body>
 </html>
